changes in main controller
