# api/controllers/main-controller.js
@@ -1,163 +1,121 @@
-require("dotenv").config();
-let apiSecret = process.env.API_SECRET;
 
-const fetch = require('node-fetch');
-const sql = require("../../config/sql");
-const messages = require("../../config/constant");
-var jwt = require("jsonwebtoken");
-var auth = require("../helpers/auth");
-var clientApiRoot = process.env.CLIENT_API_ROOT;
+const fetch = require("node-fetch")
+const sql = require("../../config/sql")
+const auth = require("../helpers/auth")
+const messages = require("../../config/constant")
+const Validator = require("../validators/auth.validator")
+const apiSecret = process.env.API_SECRET
+const clientApiRoot = process.env.CLIENT_API_ROOT
 
-exports.loginPost = function (args, res, next) {
+// Account login 
+exports.loginPost = async (req, res, next) => {
+  try {
+    const role = "admin"
+    const { email, password } = req.body
 
-  var role = 'admin';
-
-  var response;
-
-  if (args.body.email == undefined || args.body.password == undefined) {
-    response = {
-      message: messages.SOME_THING_WENT_WRONG,
-      details: messages.MISSING_EMAIL_OR_PASSWORD_FIELD
-    };
-    res.writeHead(404, { "Content-Type": "application/json" });
-    return res.end(JSON.stringify(response));
-  }
-
-  let useremail = args.body.email;
-  let password = args.body.password;
-
-  if (useremail == '')
-    response = { message: messages.EMAIL_IS_EMPTY };
-
-  if (password == '')
-    response = { message: messages.PASSWORD_IS_EMPTY };
-
-  if (useremail == '' || password == '') {
-    res.writeHead(404, { "Content-Type": "application/json" });
-    return res.end(JSON.stringify(response));
-  }
-
-  return sql("SELECT user_id, email FROM authorized_users WHERE email=@email AND password=@pass", { email: useremail, pass: password }).then(result => {
-
-    if (result.length > 0) {
-
-      var tokenString = auth.issueToken(useremail, role);
-
-      jwt.verify(tokenString, apiSecret, function (verificationError, decoded) {
-
-        if (verificationError) {
-          response = { message: messages.INVALID_TOKEN };
-          res.writeHead(500, { "Content-Type": "application/json" });
-          return res.end(JSON.stringify(response));
-        }
-
-        response = {
-          access_token: tokenString,
-          token_type: "bearer",
-          expires_in: decoded.exp,
-          user_id: result[0].user_id,
-          scope: role
-        };
-
-        res.writeHead(200, { "Content-Type": "application/json" });
-        return res.end(JSON.stringify(response));
-
-      });
-
-    } else {
-
-      var response = { message: messages.WRONG_CREDENTIAL };
-      res.writeHead(404, { "Content-Type": "application/json" });
-      return res.end(JSON.stringify(response));
+    // check validity
+    const validate = await Validator.Login(req.body)
+    if (!validate.isValid) {
+      return res.status(422).json({
+        message: validate.error
+      })
     }
 
-  });
+    // match user credentials
+    const result = await sql("SELECT user_id, email FROM authorized_users WHERE email=@email AND password=@pass", { email: email, pass: password })
+    if (result && result.length > 0) {
+      const token = auth.issueToken(email, role)
 
-};
+      // Verify token
+      const verifiedToken = await auth.isVerifiedToken(token, apiSecret)
+      if (!verifiedToken) {
+        return res.status(500).json({
+          message: messages.INVALID_TOKEN
+        })
+      }
+
+      return res.status(200).json({
+        access_token: token,
+        token_type: "bearer",
+        expires_in: verifiedToken.exp,
+        user_id: result[0].user_id,
+        scope: role
+      })
+    }
+
+    res.status(404).json({
+      message: messages.WRONG_CREDENTIAL
+    })
+  } catch (error) {
+    if (error) next(error)
+  }
+}
 
 /* Get user details from Client API, associated with the logged in user */
-exports.appUser = function (args, res, next) {
+exports.appUser = async (req, res, next) => {
+  try {
+    const token = req.headers.authorization
+    if (!token) return res.status(404).json({ message: messages.TOKEN_IS_EMPTY })
+    const splitToken = await token.split(' ')[1]
 
-  let userId = args.swagger.params.user_id.value;
-  var url = clientApiRoot + '/User/' + userId;
+    // check valid token
+    const validToken = await auth.isVerifiedToken(splitToken, apiSecret)
+    if (!validToken) {
+      return res.status(501).json({
+        message: messages.INVALID_TOKEN
+      })
+    }
 
-  const getData = async url => {
+    const userId = req.swagger.params.user_id.value
+    const url = clientApiRoot + '/User/' + userId
 
-    try {
+    const response = await fetch(url)
+    const data = await response.json()
+    if (!data.length) {
+      return res.status(400).json({
+        message: messages.APP_USER_NOT_FOUND
+      })
+    }
 
-      const response = await fetch(url);
-      const data = await response.json();
-
-      //console.log("App User Data:", JSON.stringify(data, null, 2));
-
-      return res.send(data);
-
-    } catch (error) {
-
-      console.log("ERROR in App User Data:", JSON.stringify(error, null, 2));
-
-      response = {
+    res.status(200).json(data)
+  } catch (error) {
+    if (error) {
+      res.status(500).json({
         message: messages.SOME_THING_WENT_WRONG,
         details: error
-      };
-
-      return res.send(response);
-
+      })
     }
-  };
-
-  getData(url);
-
-};
+  }
+}
 
 /* Get projects from Client API, associated with the logged in user's department */
-exports.projectByDepartment = function (args, res, next) {
+exports.projectByDepartment = async (req, res, next) => {
+  try {
+    const token = req.headers.authorization
+    if (!token) return res.status(404).json({ message: messages.TOKEN_IS_EMPTY })
+    const splitToken = await token.split(' ')[1]
 
-  let departmentKey = args.swagger.params.department_key.value;
+    // check valid token
+    const validToken = await auth.isVerifiedToken(splitToken, apiSecret)
+    if (!validToken) {
+      return res.status(501).json({
+        message: messages.INVALID_TOKEN
+      })
+    }
 
-  var url = clientApiRoot + '/Project/' + departmentKey;
+    const departmentKey = req.swagger.params.department_key.value
+    const url = clientApiRoot + '/Project/' + departmentKey
 
-  const getData = async url => {
+    const response = await fetch(url, { header: req.headers })
+    const data = await response.json()
 
-    try {
-
-      const response = await fetch(url);
-      const data = await response.json();
-
-      //console.log("Project Data:", JSON.stringify(data, null, 2));
-
-      return res.send(data);
-
-    } catch (error) {
-
-      console.log("ERROR in Project Data:", JSON.stringify(error, null, 2));
-
-      response = {
+    res.status(200).json(data)
+  } catch (error) {
+    if (error) {
+      res.status(500).json({
         message: messages.SOME_THING_WENT_WRONG,
         details: error
-      };
-
-      return res.send(response);
-
+      })
     }
-  };
-
-  getData(url);
-
-};
-
-exports.logoutPost = function (args, res, next) {
-
-  let authHeader = args.headers.authorization;
-  let accessToken = authHeader.split(" ")[1];
-
-  return sql("DELETE FROM AccessToken WHERE token=@accessToken", { accessToken: accessToken }).then(result => {
-
-    response = { message: messages.SUCCESS_LOGOUT };
-
-    res.writeHead(200, { "Content-Type": "application/json" });
-    return res.end(JSON.stringify(response));
-
-  });
-
-};
+  }
+}
